infra/k8s/client-api/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: client-api
  labels:
    trust.codedang.com/rabbitmq: 'true'
