infra/k8s/client-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-api
  namespace: client-api
spec:
  replicas: 3 # increased from 2 to 3 for 25-2 final exam
  selector:
    matchLabels:
      app: client-api
  template:
    metadata:
      labels:
        app: client-api
    spec:
      containers:
        - name: client-api
          image: ghcr.io/skkuding/codedang-client-api
          resources:
            limits:
              cpu: 2 # increased from 1 to 2 for 25-2 final exam
              memory: 1.5Gi
            requests:
              cpu: 0.2
              memory: 200Mi
          volumeMounts:
            - name: rabbitmq-ca
              mountPath: /etc/codedang/certs
              readOnly: true

      volumes:
        - name: rabbitmq-ca
          configMap:
            name: rabbitmq-ca-cert
            items:
              - key: ca.crt
                path: ca.crt
