infra/k8s/client-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-api-server
  namespace: client-api
  labels:
    app: client-api
spec:
  selector:
    app: client-api
  ports:
    - name: http
      port: 4000
      targetPort: 4000
