infra/k8s/client-api/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: client-api-server-httproute
  namespace: client-api
spec:
  parentRefs:
    - name: main-gateway
      namespace: kube-system
      sectionName: https-apex
  hostnames:
    - codedang.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
      backendRefs:
        - name: client-api-server
          port: 4000
